--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "argon2": "^0.44.0",
+    "connect-redis": "^6.1.3",
+    "connect-typeorm": "^2.0.0",
     "express-session": "^1.18.2",
+    "ioredis": "^5.8.2",
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
     "pg": "^8.16.3",
